test_objc/fail_compilation/objc_interface1.d

interface A {
	void oneTwo(int a, int b) [one:two:]; // selector attached in non-Obj-C interface
}
